--- a/templates/components/ProductCard.html.twig
+++ b/templates/components/ProductCard.html.twig
@@ -1,16 +1,18 @@
 {% if variant is defined and variant == 'small' %}
   <div class="bg-[#FEFDFB] rounded-lg p-2 w-full max-w-xs flex flex-row items-center shadow-md h-auto">
-    <img
-      src="{{ imageUrl }}"
-      alt="Product Image"
-      class="w-16 h-16 object-cover rounded-lg"
-    />
-    
-    <div class="flex flex-col ml-3 flex-grow">
-      <span class="text-xs font-normal text-gray-800">{{ category }}</span>
-      <p class="font-semibold text-sm font-playfair truncate">{{ name }}</p>
-      <span class="text-xs font-semibold text-gray-800 px-2 py-0.5 rounded-full bg-[#EDA23930] w-fit">{{ price }}€</span>
-    </div>
+    <a href="{{ path('app_product_page', { slug: name|lower|replace({' ': '-'}) }) }}" aria-label="Voir le produit {{ name }}">
+      <img
+          src="{{ imageUrl }}"
+          alt="Product Image"
+          class="w-16 h-16 object-cover rounded-lg"
+      />
+
+      <div class="flex flex-col ml-3 flex-grow">
+        <span class="text-xs font-normal text-gray-800">{{ category }}</span>
+        <p class="font-semibold text-sm font-playfair truncate">{{ name }}</p>
+        <span class="text-xs font-semibold text-gray-800 px-2 py-0.5 rounded-full bg-[#EDA23930] w-fit">{{ price }}€</span>
+      </div>
+    </a>
     
     <div class="flex">
       <button class="p-2 bg-orange-400 rounded-full text-white">
@@ -20,21 +22,25 @@
   </div>
 {% else %}
   <div class="bg-[#FEFDFB] rounded-lg p-3 w-full max-w-xs flex flex-col shadow-lg h-auto">
-    <img
-      src="{{ imageUrl }}"
-      alt="Product Image"
-      class="w-full h-48 object-cover rounded-lg mb-3"
-    />
+    <a href="{{ path('app_product_page', { slug: name|lower|replace({' ': '-'}) }) }}" aria-label="Voir le produit {{ name }}">
+      <img
+          src="{{ imageUrl }}"
+          alt="Product Image"
+          class="w-full h-48 object-cover rounded-lg mb-3"
+      />
+    </a>
 
     <div class="flex flex-col flex-grow">
-      <span class="text-xs font-normal text-gray-800">{{ category }}</span>
+      <a href="{{ path('app_product_page', { slug: name|lower|replace({' ': '-'}) }) }}" aria-label="Voir le produit {{ name }}" class="flex flex-col flex-grow">
+        <span class="text-xs font-normal text-gray-800">{{ category }}</span>
 
-      <div class="w-full flex flex-row items-center justify-between mt-1">
-        <p class="font-semibold text-lg font-playfair">{{ name }}</p>
-        <span class="text-xs font-semibold text-gray-800 px-2 py-0.5 rounded-full bg-[#EDA23930]">{{ price }}€</span>
-      </div>
+        <div class="w-full flex flex-row items-center justify-between mt-1">
+          <p class="font-semibold text-lg font-playfair">{{ name }}</p>
+          <span class="text-xs font-semibold text-gray-800 px-2 py-0.5 rounded-full bg-[#EDA23930]">{{ price }}€</span>
+        </div>
 
-      <p class="text-gray-600 mt-2 text-xs flex-grow line-clamp-3">{{ description }}</p>
+        <p class="text-gray-600 mt-2 text-xs flex-grow line-clamp-3">{{ description }}</p>
+      </a>
 
       <div class="w-full flex flex-col sm:flex-row gap-2 mt-3">
         <twig:Button
@@ -50,7 +56,7 @@
         <twig:Button
           label="Détails"
           variant="dark"
-          href="#"
+          href="{{ path('app_product_page', { slug: name|lower|replace({' ': '-'}) }) }}"
           fullWidth
           iconLeft="book-image"
           size="sm"
