fix(base.html.twig): add non-breaking space after title block to improve title formatting in HTML

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>
       {%- if block('title') is defined and block('title')|trim is not empty -%}
-        {{ block('title') }} -
+        {{ block('title') }} -&nbsp;
       {%- endif -%}
       Aux Douceurs du Palais
     </title>
