fix(templates): update icon links to use absolute URLs for better accessibility and reliability across different environments

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,7 +9,7 @@
       Aux Douceurs du Palais
     </title>
 
-    <link rel="icon" href="/icons/icon-tab.svg">
+    <link rel="icon" href="https://cdn.douceurs-palais.fr/icon-tab.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Au Douceurs du Palais - Votre pâtisserie en ligne. Commandez vos douceurs préférées et faites-vous livrer à domicile.">
     <meta name="keywords" content="pâtisserie, douceurs, en ligne, livraison, desserts, gâteaux, macarons">
