--- a/templates/components/Navbar.html.twig
+++ b/templates/components/Navbar.html.twig
@@ -20,7 +20,7 @@
         </button>
       </div>
       <a href="/">
-        <img src="/icons/icon-title.png" alt="Logo" height="140px" width="140px" />
+        <img src="https://cdn.douceurs-palais.fr/icon-title.png" alt="Logo" height="140px" width="140px" />
       </a>
     </div>
     <div class="flex items-center gap-2">
@@ -69,7 +69,7 @@
   </div>
 
   <a href="/" class="hidden md:block absolute left-1/2 top-1/2 transform -translate-x-1/2 -translate-y-1/2">
-    <img src="/icons/icon-title.png" alt="Logo" height="190px" width="190px" />
+    <img src="https://cdn.douceurs-palais.fr/icon-title.png" alt="Logo" height="190px" width="190px" />
   </a>
 
   <div class="hidden md:flex items-center gap-4">
