--- a/templates/index_page/favorites.html.twig
+++ b/templates/index_page/favorites.html.twig
@@ -78,6 +78,7 @@
                   category="{{ product.category.name ?: 'Pâtisserie' }}"
                   name="{{ product.name }}"
                   description="{{ product.description|striptags|slice(0, 100) ~ (product.description|length > 100 ? '...' : '') }}"
+                  productId="{{ product.id }}"
               />
             {% endfor %}
           </div>
