--- a/templates/product_page/index.html.twig
+++ b/templates/product_page/index.html.twig
@@ -54,6 +54,14 @@
               iconLeft="shopping-bag"
               class="w-full"
           />
+          <button
+              class="inline-flex items-center justify-center px-4 py-2 bg-[#EDA239] text-black font-medium rounded-md hover:bg-[#EFAF7D] transition-colors"
+              data-add-to-cart
+              data-product-id="{{ product.id }}"
+          >
+            <i data-lucide="shopping-bag" class="w-4 h-4 mr-2"></i>
+            Ajouter au panier
+          </button>
         </div>
       </div>
     </div>
