--- a/templates/category/bakery_category.html.twig
+++ b/templates/category/bakery_category.html.twig
@@ -30,6 +30,7 @@
                 category="{{ category.name }}"
                 name="{{ product.name }}"
                 description="{{ product.description|striptags|slice(0, 100) ~ (product.description|length > 100 ? '...' : '') }}"
+                productId="{{ product.id }}"
             />
           {% endfor %}
         </div>
