--- a/templates/components/ProductCard.html.twig
+++ b/templates/components/ProductCard.html.twig
@@ -13,7 +13,7 @@
         <span class="text-xs font-semibold text-gray-800 px-2 py-0.5 rounded-full bg-[#EDA23930] w-fit">{{ price }}€</span>
       </div>
     </a>
-    
+
     <div class="flex">
       <button class="p-2 bg-orange-400 rounded-full text-white">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shopping-bag"><path d="M6 2L3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4z"></path><line x1="3" y1="6" x2="21" y2="6"></line><path d="M16 10a4 4 0 0 1-8 0"></path></svg>
@@ -46,11 +46,12 @@
         <twig:Button
           label="Ajouter"
           variant="primary"
-          href="#"
           fullWidth
           iconLeft="shopping-bag"
           size="sm"
           class="w-full"
+          addCart
+          productId="{{ productId }}"
         />
 
         <twig:Button
