--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,15 +23,16 @@
       {{ encore_entry_link_tags('app') }}
     {% endblock %}
 
-    {% block javascripts %}
-      {{ encore_entry_script_tags('app') }}
-    {% endblock %}
-  </head>
-  <body class="bg-[#FEFDFB] flex flex-col min-h-screen">
-    <twig:Navbar class="flex-shrink-0" />
-    <main class="flex-grow">
-      {% block body %}{% endblock %}
-    </main>
-    <twig:Footer />
-  </body>
+  {% block javascripts %}
+    {{ encore_entry_script_tags('app') }}
+    {{ encore_entry_script_tags('cart') }}
+  {% endblock %}
+</head>
+<body class="bg-[#FEFDFB] flex flex-col min-h-screen">
+<twig:Navbar class="flex-shrink-0" />
+<main class="flex-grow">
+  {% block body %}{% endblock %}
+</main>
+<twig:Footer />
+</body>
 </html>
