style: clarify comment in scroll event handler for better understanding

--- a/templates/components/Navbar.html.twig
+++ b/templates/components/Navbar.html.twig
@@ -161,7 +161,7 @@
     }
 
     window.addEventListener('scroll', handleScroll);
-    // Check on load too
+    // Check on load too | to set the initial state
     handleScroll();
   });
 </script>
