--- a/templates/components/Navbar.html.twig
+++ b/templates/components/Navbar.html.twig
@@ -79,11 +79,10 @@
       <a href="{{ path('app_cart_index') }}" class="rounded-full p-2 flex items-center justify-center cursor-pointer">
         <i data-lucide="shopping-bag" class="w-6 h-6"></i>
         {% set itemCount = cart_item_count() %}
-        {% if itemCount > 0 %}
-          <span class="cart-count absolute -top-1 -right-1 bg-red-500 text-white text-xs rounded-full w-5 h-5 flex items-center justify-center">
-            {{ itemCount }}
-          </span>
-        {% endif %}
+3
+        <span class="cart-count absolute -top-1 -right-1 bg-red-500 text-white text-xs rounded-full w-5 h-5 flex items-center justify-center {{ itemCount > 0 ? '' : 'hidden' }}">
+      {{ itemCount }}
+    </span>
       </a>
     </div>
 
