--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -19,7 +19,7 @@
       </div>
 
       {% if products|length > 0 %}
-        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
+        <div class="flex flex-wrap gap-4 justify-center sm:justify-start">
           {% for product in products %}
             <twig:ProductCard
                 imageUrl="{{ product.mainImage ?: 'https://via.placeholder.com/400x250' }}"
