--- a/templates/components/Navbar.html.twig
+++ b/templates/components/Navbar.html.twig
@@ -95,6 +95,15 @@
           <div class="py-1" role="menu" aria-orientation="vertical" aria-labelledby="options-menu">
             <a href="{{ path('app_account') }}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Mon compte</a>
             <a href="{{ path('app_account_addresses') }}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Mes adresses</a>
+
+            {% if is_granted('ROLE_BAKER') %}
+              <a href="{{ path('app_baker') }}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Ma boulangerie</a>
+            {% endif %}
+
+            {% if is_granted('ROLE_ADMIN') %}
+              <a href="{{ path('app_admin') }}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Administration</a>
+            {% endif %}
+
             <div class="border-t border-gray-100"></div>
             <a href="{{ path('app_logout') }}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Déconnexion</a>
           </div>
